Changes to some references

--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Elizabeth Moorcroft at 2014-05-16 18:02:15 +0100 
+%% Created for Elizabeth Moorcroft at 2014-06-18 15:41:19 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{purvis2000predicting,
+	Author = {Purvis, Andy and Gittleman, John L and Cowlishaw, Guy and Mace, Georgina M},
+	Date-Added = {2014-06-18 12:23:09 +0000},
+	Date-Modified = {2014-06-18 12:23:09 +0000},
+	Journal = {Proceedings of the Royal Society of London. Series B: Biological Sciences},
+	Number = {1456},
+	Pages = {1947--1952},
+	Publisher = {The Royal Society},
+	Title = {Predicting extinction risk in declining species},
+	Volume = {267},
+	Year = {2000}}
 
 @article{yack2013passive,
 	Author = {Yack, Tina M and Barlow, Jay and Calambokidis, John and Southall, Brandon and Coates, Shannon},
@@ -24,12 +36,12 @@
 @article{zero2013monitoring,
 	Author = {Zero, Victoria H and Sundaresan, Siva R and O'Brien, Timothy G and Kinnaird, Margaret F},
 	Date-Added = {2014-05-16 12:54:00 +0000},
-	Date-Modified = {2014-05-16 12:54:00 +0000},
+	Date-Modified = {2014-06-18 14:41:19 +0000},
 	Journal = {Oryx},
 	Number = {03},
 	Pages = {410--419},
 	Publisher = {Cambridge Univ Press},
-	Title = {Monitoring an Endangered savannah ungulate, Grevy's zebra Equus grevyi: choosing a method for estimating population densities},
+	Title = {Monitoring an Endangered savannah ungulate, Grevy's zebra (\emph{Equus grevyi}): choosing a method for estimating population densities},
 	Volume = {47},
 	Year = {2013}}
 
@@ -200,11 +212,12 @@
 
 @article{karanth1995,
 	Author = {Karanth, KU},
+	Date-Modified = {2014-06-18 14:35:56 +0000},
 	Journal = {Biological Conservation},
 	Number = {3},
 	Pages = {333--338},
 	Publisher = {Elsevier},
-	Title = {Estimating tiger \emph{Panthera tigris} populations from camera-trap data using capture--recapture models},
+	Title = {Estimating tiger (\emph{Panthera tigris}) populations from camera-trap data using capture--recapture models},
 	Volume = {71},
 	Year = {1995}}
 
@@ -258,10 +271,11 @@
 
 @article{marques2011estimating,
 	Author = {Marques, Tiago A and Munger, Lisa and Thomas, Len and Wiggins, Sean and Hildebrand, John A},
+	Date-Modified = {2014-06-18 14:37:07 +0000},
 	Journal = {Endangered Species Research},
 	Number = {3},
 	Pages = {163--172},
-	Title = {Estimating North Pacific right whale Eubalaena japonica density using passive acoustic cue counting},
+	Title = {Estimating North Pacific right whale (\emph{Eubalaena japonica}) density using passive acoustic cue counting},
 	Volume = {13},
 	Year = {2011}}
 
@@ -819,7 +833,8 @@
 	Year = {1983}}
 
 @article{o1985genetic,
-	Author = {O'brien, SJ and Roelke, ME and Marker, L and Newman, A and Winkler, CA and Meltzer, D and Colly, L and Evermann, JF and Bush, M and Wildt, David E},
+	Author = {O'Brien, SJ and Roelke, ME and Marker, L and Newman, A and Winkler, CA and Meltzer, D and Colly, L and Evermann, JF and Bush, M and Wildt, David E},
+	Date-Modified = {2014-06-18 14:38:38 +0000},
 	Journal = {Science},
 	Number = {4693},
 	Pages = {1428--1434},
@@ -2051,7 +2066,8 @@
 
 @article{clark1995application,
 	Author = {Clark, Christopher W},
-	Journal = {Rep. int. Whal. Commn},
+	Date-Modified = {2014-06-18 14:33:52 +0000},
+	Journal = {Reports of the International Whaling Commission},
 	Pages = {210--212},
 	Title = {Application of {US Navy} underwater hydrophone arrays for scientific research on whales},
 	Volume = {45},
